[package]
name = "eddystone_scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.16.1", features = ["full"] }
dbus = { version = "0.9", features = ["futures"], optional = true }
dbus-tokio = { version = "0.7", optional = true }
dbus-crossroads = { version = "0.5", optional = true }
futures = "0.3"
pin-project = { version = "1", optional = true }
tokio = { version = "1", features = ["net", "io-util"] }
tokio-stream = { version = "0.1", optional = true }
hex = { version = "0.4" }
lazy_static = { version = "1", optional = true }
uuid = { version = "1", features = ["v4"] }
strum = { version = "0.25", features = ["derive"] }
num-traits = "0.2"
num-derive = "0.4"
libc = "0.2"
nix = { version = "0.27", default-features = false, features = ["ioctl"] }
custom_debug = { version = "0.5", optional = true }
displaydoc = { version = "0.2", optional = true }
log = "0.4"
serde = { version = "1.0", features = ["derive"]}
macaddr = "1"
env_logger = "0.10"
paho-mqtt = "0.12.2"
serde_json = "1"

[build-dependencies]
uuid = "1"

[dev-dependencies]
tokio = { version = "1", features = [
    "io-std",
    "io-util",
    "rt-multi-thread",
    "signal",
] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
